version 3.1.0
- moved interface to separate assemblies (avoid Rx dependencies & just update the implementation without rebuilding)

version 3.0.3
- reduce dns resolve calls

version 3.0.2
- reduce dns lookup
- ClusterManager now fails if no valid endpoint found
- ClusterManager now fails if current machine ip can't be resolved
- more env info in cqlplus !help
- Rx binaries are now in net40

version 3.0.1
- fixed invalid cast in cqlplus

version 3.0.0
- total rewrite of Connection
- expose a new interface using Rx (IObservable)
- future are now a TPL Task returning a list of results
- improved throughput using LongRunning connection type
- NuGet support for net40 and net45 binaries
- performance report is asynchronous
- official support for nullable (NOTE: sending null in prepare statement is supported but only with C* 1.2.2+)
- receive and send timeout support (disabled by default)
- keep alive support (by default, using OS configuration)
- changed the PropertyBag interface : use a typed class instead of IDictionary

version 2.3.1
- fixed connection leak on read error

version 2.3.0
- fixed stalled client 
- instrumentation for performance tracing client & server side
- configurable Cluster type (see ClusterConfig.Type)
- break the interface (splitting ICqlCommand & IPreparedQuery) - be sure to read NEWS.txt

version 2.2.1
- added version in Zip & NuGet
- cqlplus is in NuGet lib folder, only CassandraSharp.dll is then referenced
- fixed issue 26 (https://github.com/pchalamet/cassandra-sharp/issues/26)

version 2.2.0
- POCO is now using DynamicMethod instead of Reflection
- support for IDeserializationCallback
- fix failure on connection when IO errors
- merge "Cassandra-Sharp write performance Vs Thrift Client" from hjarraya
- fix authentication issues (https://github.com/pchalamet/cassandra-sharp/issues/25)

version 2.1.2
- fixed issue 9 (https://github.com/pchalamet/cassandra-sharp/issues/9)
- read again asap if buffering mode 