@@ -19,7 +19,7 @@ namespace cqlplus.Commands
     using System.Linq;
     using System.Reflection;
     using System.Text;
-    using CassandraSharp.Cluster;
+    using CassandraSharp.CQLBinaryProtocol;
 
     [Description("display help")]
     internal class Help : CommandBase
@@ -32,7 +32,7 @@ namespace cqlplus.Commands
                 cmdMaxLen = Math.Max(cmdMaxLen, cmdType.Key.Length);
             }
 
-            string version = typeof(DefaultClusterManager).Assembly.GetName().Version.ToString();
+            string version = typeof(Command).Assembly.GetName().Version.ToString();
             Console.WriteLine("cassandra-sharp {0}", version);
             Console.WriteLine("OS {0} / .NET {1}", Environment.OSVersion, Environment.Version);
             Console.WriteLine("OS x64 {0} / Process x64 {1} / Proc count {2}", Environment.Is64BitOperatingSystem, Environment.Is64BitProcess,
